src/test/ui/E0663.stderr
error[E0663]: input operand constraint contains '+'
  --> $DIR/E0663.rs:6:12
   |
LL |          : "+test"("a") //~ ERROR E0663
   |            ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0663`.
